tests/paczka1/fuzzy1/54599038.err
Error in line 1: A214 A415 26,5
Error in line 2: Qps A949 72,0
Error in line 12: RNqilYbXv A214 35,5
Error in line 13: RNqilYbXv A415 18,1
Error in line 20: A214 A949 18,4
Error in line 17: RNqilYbXv A214 28,4
Error in line 25: rQjuRj6EJWV A\4\ 13,3
Error in line 19: rQjuRj6EJWV A955 0,1
Error in line 35: DUzsv A214 442,1
